--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
      <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<body class="bg-custom">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#"><span class="text-secondary">Fit</span>Guide</a>
+    <a class="navbar-brand" href="#" style="font-size: 30px; font-weight: 600;"><span class="text-secondary">Fit</span>Guide</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -54,21 +55,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./img/main/slider-bg.jpg" class="d-block w-100" alt="..." width="100%" height="100%">
+      <img src="./img/main/s1.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 100%;">
       <div class="carousel-caption">
         <h5>FITGUIDE PRO</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/main/result-img.jpg" class="d-block w-100" alt="..." width="100%" height="100%">
+      <img src="./img/main/s2.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 100%;">
       <div class="carousel-caption">
-        <h5>About</h5>
+        <h5>MEN'S CLUB</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/main/s-4.jpg" class="d-block w-100" alt="..." width="100%" height="100%">
+      <img src="./img/main/s3.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 100%;">
       <div class="carousel-caption">
-        <h5>Blog</h5>
+        <h5>WOMEN'S CLUB</h5>
       </div>
     </div>
   </div>
@@ -87,7 +88,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-12 col-12">
         <div class="about-img">
-          <img src="./img/main/Black and White Flat Illustrative Fitness Logo (2).png" alt="" height="100%" width="95%">
+          <img src="./img/main/s4.jpg" alt="" height="100%" width="95%">
         </div>
       </div>
       <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
@@ -95,7 +96,7 @@
           <h2>We Provide Best Quality <br> Services Everywhere</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, doloremque culpa excepturi sint sit dolore numquam temporibus eius dolorem rem, veniam, delectus asperiores officia perspiciatis? Ab at nihil totam nemo. Vitae magnam iste quos tenetur maiores omnis dolores, quam doloribus quasi ullam dicta dolorum corporis perferendis. Omnis nihil quas aperiam.</p>
           
-          <a href="#" class="btn btn-dark">Learn More</a>
+          <a href="#" class="btn bg-custom-2" style="color: #fff; font-weight: 600;">Learn More</a>
 
         </div>
       </div>
@@ -109,40 +110,40 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-header text-center pb-5">
-          <h2>Our Services</h2>
+          <h2 style="font-weight: 600; font-size: 2rem; color: #fff;">Our Services</h2>
           <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus praesentium architecto tempora provident hic nemo?</p> -->
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center bg-custom-2 pb-2">
           <div class="card-body">
-          <i class="bi bi-subtract"></i>
-          <h3 class="card-title">Best Quality</h3>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
+          <i class="bi bi-subtract" style="font-size: 5rem;"></i>
+          <h3 class="card-title" style="color: #fff; font-weight: 600;">Best Quality</h3>
+          <p class="lead" style="font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
           <button class="btn btn-light text-dark">Read More</button>
         </div>
        </div>
       </div>
 
       <div class="col-12 col-md-12 col-lg-4">
-        <div class= "card text-white text-center bg-dark pb-2">
+        <div class= "card text-white text-center bg-custom-2 pb-2">
           <div class="card-body">
-          <i class="bi bi-slack"></i>
-          <h3 class="card-title">Sustainability</h3>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
+          <i class="bi bi-slack" style="font-size: 5rem;"></i>
+          <h3 class="card-title" style="color: #fff; font-weight: 600;">Sustainability</h3>
+          <p class="lead" style="font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
           <button class="btn btn-light text-dark">Read More</button>
         </div>
        </div>
       </div>
 
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center bg-custom-2 pb-2">
           <div class="card-body">
-          <i class="bi bi-shield-shaded"></i>
-          <h3 class="card-title">Integrity</h3>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
+          <i class="bi bi-shield-shaded" style="font-size: 5rem;"></i>
+          <h3 class="card-title" style="color: #fff; font-weight: 600;">Integrity</h3>
+          <p class="lead" style="font-size: 1rem;"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur inventore impedit tenetur voluptatibus autem minima repudiandae voluptas error dolores.</p>
           <button class="btn btn-light text-dark">Read More</button>
         </div>
        </div>
@@ -160,7 +161,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-header text-center pb-5">
-          <h2 class="h2">Our Projects</h2>
+          <h2 class="h2" style="font-weight: 600; font-size: 2rem; color: #fff;">Our Projects</h2>
 
         </div>
       </div>
@@ -168,13 +169,13 @@
 
     <div class="row">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-light text-center bg-white pb-2">
+        <div class="card text-light text-center bg-custom-3 pb-5" style="border: 1px solid #fff;">
           <div class="card-body text-dark">
             <div class="img-area mb-4">
               <img src="./img/main/s-2.jpg" alt="" class="fluid" width="100%" height="100%">
             </div>
-            <h3 class="card-title">Promoting Health</h3>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
+            <h3 class="card-title" style="color: #fff; font-weight: 600;">Promoting Health</h3>
+            <p class="lead" style="color: #fff; font-size: 1rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
             <button class="btn bg-dark text-light">Learn More</button>
 
           </div>
@@ -183,13 +184,13 @@
       </div>
 
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-light text-center bg-white pb-2">
+        <div class="card text-light text-center bg-custom-3 pb-5" style="border: 1px solid #fff;">
           <div class="card-body text-dark">
             <div class="img-area mb-4">
               <img src="./img/main/s-3.jpg" alt="" class="fluid" width="100%">
             </div>
-            <h3 class="card-title">Good Health</h3>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
+            <h3 class="card-title" style="color: #fff; font-weight: 600;">Good Health</h3>
+            <p class="lead" style="color: #fff; font-size: 1rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
             <button class="btn bg-dark text-light">Learn More</button>
 
           </div>
@@ -199,13 +200,13 @@
 
 
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-light text-center bg-white pb-2">
+        <div class="card text-light text-center bg-custom-3 pb-5" style="border: 1px solid #fff;">
           <div class="card-body text-dark">
             <div class="img-area mb-4">
               <img src="./img/main/s-6.jpg" alt="" class="fluid" width="100%" height="100%">
             </div>
-            <h3 class="card-title">Essential Health</h3>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
+            <h3 class="card-title" style="color: #fff; font-weight: 600;">Essential Health</h3>
+            <p class="lead" style="color: #fff; font-size: 1rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestias quis iusto maiores nulla accusamus?</p>
             <button class="btn bg-dark text-light">Learn More</button>
 
           </div>
@@ -225,7 +226,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-header text-center pb-5">
-          <h2 class="h2-a">Our Team</h2>
+          <h2 class="h2-a" style="font-weight: 600; color: #fff;">Our Team</h2>
         </div>
       </div>
     </div>
@@ -235,13 +236,13 @@
         <div class="card text-center">
           <div class="card-body">
             <img src="./img/main/client.png" alt="" class="img-fluid rounded-circle">
-            <h3 class="card-title py-2">Jack Wilson</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
+            <h3 class="card-title py-2" style="color: #fff; font-weight: 600;">Jack Wilson</h3>
+            <p class="card-text" style="color: #fff;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
             <p class="socials">
-              <i class="bi bi-twitter text-dark mx-1"></i>
-              <i class="bi bi-facebook text-dark mx-1"></i>
-              <i class="bi bi-linkedin text-dark mx-1"></i>
-              <i class="bi bi-instagram text-dark mx-1"></i>
+              <i class="bi bi-twitter text-white mx-1"></i>
+              <i class="bi bi-facebook text-white mx-1"></i>
+              <i class="bi bi-linkedin text-white mx-1"></i>
+              <i class="bi bi-instagram text-white mx-1"></i>
             </p>
           </div>
 
@@ -253,13 +254,13 @@
         <div class="card text-center">
           <div class="card-body">
             <img src="./img/main/client.png" alt="" class="img-fluid rounded-circle">
-            <h3 class="card-title py-2">Jake Wilson</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
+            <h3 class="card-title py-2" style="color: #fff; font-weight: 600;">Jake Wilson</h3>
+            <p class="card-text"  style="color: #fff;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
             <p class="socials">
-              <i class="bi bi-twitter text-dark mx-1"></i>
-              <i class="bi bi-facebook text-dark mx-1"></i>
-              <i class="bi bi-linkedin text-dark mx-1"></i>
-              <i class="bi bi-instagram text-dark mx-1"></i>
+              <i class="bi bi-twitter text-white mx-1"></i>
+              <i class="bi bi-facebook text-white mx-1"></i>
+              <i class="bi bi-linkedin text-white mx-1"></i>
+              <i class="bi bi-instagram text-white mx-1"></i>
             </p>
           </div>
 
@@ -271,13 +272,13 @@
         <div class="card text-center">
           <div class="card-body">
             <img src="./img/main/client.png" alt="" class="img-fluid rounded-circle">
-            <h3 class="card-title py-2">Jace Wilson</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
+            <h3 class="card-title py-2" style="color: #fff; font-weight: 600;">Jace Wilson</h3>
+            <p class="card-text"  style="color: #fff;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
             <p class="socials">
-              <i class="bi bi-twitter text-dark mx-1"></i>
-              <i class="bi bi-facebook text-dark mx-1"></i>
-              <i class="bi bi-linkedin text-dark mx-1"></i>
-              <i class="bi bi-instagram text-dark mx-1"></i>
+              <i class="bi bi-twitter text-white mx-1"></i>
+              <i class="bi bi-facebook text-white mx-1"></i>
+              <i class="bi bi-linkedin text-white mx-1"></i>
+              <i class="bi bi-instagram text-white mx-1"></i>
             </p>
           </div>
 
@@ -289,13 +290,13 @@
         <div class="card text-center">
           <div class="card-body">
             <img src="./img/main/client.png" alt="" class="img-fluid rounded-circle">
-            <h3 class="card-title py-2">Jane Wilson</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
+            <h3 class="card-title py-2" style="color: #fff; font-weight: 600;">Jane Wilson</h3>
+            <p class="card-text"  style="color: #fff;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ut.</p>
             <p class="socials">
-              <i class="bi bi-twitter text-dark mx-1"></i>
-              <i class="bi bi-facebook text-dark mx-1"></i>
-              <i class="bi bi-linkedin text-dark mx-1"></i>
-              <i class="bi bi-instagram text-dark mx-1"></i>
+              <i class="bi bi-twitter text-white mx-1"></i>
+              <i class="bi bi-facebook text-white mx-1"></i>
+              <i class="bi bi-linkedin text-white mx-1"></i>
+              <i class="bi bi-instagram text-white mx-1"></i>
             </p>
           </div>
 
@@ -313,7 +314,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-header text-center pb-5">
-          <h2 class="h2-b">Contact Us</h2>
+          <h2 class="h2-b" style="font-weight: 600; color: #fff;">Contact Us</h2>
         </div>
       </div>
     </div>
@@ -323,22 +324,22 @@
         <div class="row">
           <div class="col-md-12">
             <div class="mb-3">
-              <input type="text" class="form-control" required placeholder="Enter Name">
+              <input type="text" class="form-control input-dark" required placeholder="Enter Name">
             </div>
           </div>
           <div class="col-md-12">
             <div class="mb-3">
-              <input type="email" class="form-control" required placeholder="Enter Email">
+              <input type="email" class="form-control input-dark" required placeholder="Enter Email">
             </div>
           </div>
           <div class="col-md-12">
             <div class="mb-3">
-              <textarea rows="3" required class="form-control" placeholder="Your Query"></textarea>
+              <textarea rows="3" required class="form-control input-dark" placeholder="Your Query"></textarea>
             </div>
 
           </div>
 
-          <button class="btn btn-dark btn-lg btn-block mt-3" type="submit">Send Now</button>
+          <button class="btn btn-dark btn-lg btn-block mt-3" type="submit" style="background-color: rgb(9, 9, 9);">Send Now</button>
 
         </div>
 
@@ -349,7 +350,7 @@
 
 </section>
 
-<footer class="bg-dark p-2 text-center">
+<footer class="bg-custom-3 p-2 text-center">
   <div class="container">
     <p class="text-light my-2">All Rights Reserved &copy; FitguidePro 2024</p>
   </div>
