Updated UI for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./img/main/s1.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 100%;">
-      <div class="carousel-caption">
+      <div class="carousel-caption text-center">
         <h5>FITGUIDE PRO</h5>
       </div>
     </div>
@@ -94,7 +94,7 @@
       <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
         <div class="about-text">
           <h2>We Provide Best Quality <br> Services Everywhere</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, doloremque culpa excepturi sint sit dolore numquam temporibus eius dolorem rem, veniam, delectus asperiores officia perspiciatis? Ab at nihil totam nemo. Vitae magnam iste quos tenetur maiores omnis dolores, quam doloribus quasi ullam dicta dolorum corporis perferendis. Omnis nihil quas aperiam.</p>
+          <p>"Welcome to FitGuide Pro—your ultimate companion for mastering fitness. From expert workout routines to tailored nutrition tips, we’re here to help you crush your goals and elevate your performance!"</p>
           
           <a href="#" class="btn bg-custom-2" style="color: #fff; font-weight: 600;">Learn More</a>
 
